Fix horizontal scroll

--- a/stylus/global/style.styl
+++ b/stylus/global/style.styl
@@ -39,6 +39,9 @@ innerpage-banner = none;
 *::after
 	box-sizing: inherit;
 
+#page
+	overflow hidden
+
 section
 	position relative
 	padding: 64px 0
